tests/integration/tests/invalid_input/01_empty_invocation/sample.itest
; RUN: %expect_exit 2 %FILECHECK_EXEC | %FILECHECK_TESTER_EXEC "%s" --match-full-lines

; CHECK: <check-file> not specified
